[package]
name = "gonk"
authors = ["Sean McKibben <graphex@graphex.com>"]
edition = "2018"
version = "0.0.1"

[dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
cortex-m-semihosting = "0.3.7"
daisy_bsp = { version = "0.4.1", features = ["seed"]  }
