[package]
name = "gonk"
authors = ["Sean McKibben <graphex@graphex.com>"]
edition = "2018"
version = "0.0.1"

[dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
alloc-cortex-m = "0.4.2"
cortex-m-semihosting = "0.3.7"
daisy_bsp = { version = "0.4.1", features = ["seed"]  }
ht16k33 = { version = "0.4.0", default-features = false }
libm = "0.2.1"
spectrum-analyzer = {version = "1.2.3", default-features = false, features = ["microfft-real"]}
shared-bus = "0.2.2"
adafruit-led-backpack = {git = "https://github.com/graphex/adafruit-led-backpack.rs.git", branch="xy_swap"}
